# capstone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-checks.yml
apps/backend/: .env  .gitignore  requirements-dev.txt  requirements.txt  seed_db.py  wsgi.py
apps/backend/migrations/versions/: d1850d189804_initial_migration.py
apps/backend/postman/: casting_agency.postman_collection.json  local_environment.postman_environment.json
apps/backend/src/: __init__.py  config.py  database.py  routes.py  seed.py
apps/backend/src/auth/: auth.py
apps/backend/src/common/: error_handlers.py  logging.py
apps/backend/src/models/: __init__.py  actor.py  associations.py  base.py  movie.py
apps/backend/src/routes/: __init__.py  actors.py  error_handlers.py  movies.py
apps/frontend/: .prettierignore  .prettierrc  package-lock.json  package.json  tsconfig.json
apps/frontend/src/: proxy.conf.json
apps/frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
apps/frontend/src/app/auth/: permissions.ts
apps/frontend/src/app/components/: index.ts
apps/frontend/src/app/components/actors/: actors.component.html  actors.component.ts
apps/frontend/src/app/directives/: has-permission.directive.ts
apps/frontend/src/app/guards/: auth.guard.ts
apps/frontend/src/app/interceptors/: auth.interceptor.ts
apps/frontend/src/app/services/: base.service.ts  index.ts
apps/frontend/src/app/types/: models.ts
apps/frontend/src/environments/: environment.ts
(+19 files in other folders)
